--- a/www/index.html
+++ b/www/index.html
@@ -17,8 +17,8 @@
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
-    <script src="https://cdn.socket.io/socket.io-1.1.0.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="lib/general/socket.io-1.1.0.js"></script>
+    <script src="lib/general/jquery-1.11.0.min.js"></script>
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
