--- a/www/index.html
+++ b/www/index.html
@@ -7,6 +7,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+      <link href='http://fonts.googleapis.com/css?family=Montserrat:700,400' rel='stylesheet' type='text/css'>
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -20,21 +21,22 @@
     <script src="lib/general/socket.io-1.1.0.js"></script>
     <script src="lib/general/jquery-1.11.0.min.js"></script>
     <!-- your app's js -->
+    <script src="js/custom.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
 
-      <script src="js/custom.js"></script>
+
   </head>
   <body ng-app="starter" animation="slide-left-right-ios7">
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable nav-title-slide-ios7">
-      <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
-        Back
-      </ion-nav-back-button>
-    </ion-nav-bar>
+    <!--<ion-nav-bar class="bar-stable nav-title-slide-ios7">-->
+      <!--<ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">-->
+        <!--Back-->
+      <!--</ion-nav-back-button>-->
+    <!--</ion-nav-bar>-->
     <!-- 
       The views will be rendered in the <ion-nav-view> directive below
       Templates are in the /templates folder (but you could also
