--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,26 @@
 
 
   </head>
-  <body ng-app="starter" animation="slide-left-right-ios7">
+  <body ng-app="starter" animation="slide-left-right-ios7" ng-controller="DashCtrl">
+  <ion-pane>
+      <ion-content class="" style="background-color: #2D3E50;" scroll="false">
+          <ion-slide-box on-slide-changed="slideHasChanged($index)" show-pager="false" ng-init="init()" >
+              <ion-slide style="background-color: #2D3E50; height:100%" class="padding">
+                  <div id="myDetails"></div>
+                  <ul id="usersList"></ul>
+                  <button class="button button-block button-positive" onclick="disconnectUser()">DISCONNECT FROM USER</button>
+                  <button class="button button-block button-positive" ng-click="requestStart()">START GAME</button>
+                  <button id="nextSlideButton" class="button" style="display: none" ng-click="nextSlide()">DUMMY</button>
+              </ion-slide>
+              <ion-slide>
+                  <table id="gameBoard"></table>
+                  <button class="button button-block button-positive" ng-click="requestEnd()">END GAME</button>
+                  <button id="prevSlideButton" class="button" style="display: none" ng-click="prevSlide()">DUMMY</button>
+              </ion-slide>
+          </ion-slide-box>
+      </ion-content>
+  </ion-pane>
+
     <!-- 
       The nav bar that will be updated as we navigate between views.
     -->
@@ -42,6 +61,6 @@
       Templates are in the /templates folder (but you could also
       have templates inline in this html file if you'd like).
     -->
-    <ion-nav-view></ion-nav-view>
+    <!--<ion-nav-view></ion-nav-view>-->
   </body>
 </html>
