--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src="cordova.js"></script>
     <script src="lib/general/socket.io-1.1.0.js"></script>
     <script src="lib/general/jquery-1.11.0.min.js"></script>
+    <script src="lib/general/velocity.min.js"></script>
     <!-- your app's js -->
     <script src="js/custom.js"></script>
     <script src="js/app.js"></script>
